# hitorch

./: Cargo.toml  Makefile
docs/: gpu2gpu.md  vllm-cli.md  vllm-notes.txt
examples/: hinccl.rs  hitorch.rs
src/: cmd_serve.rs  lib.rs  main.rs
src/entrypoints/: mod.rs
src/entrypoints/openai/: protocol.rs
