[package]
name = "vrllm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.19", features = ["derive"] }
url = "2.5.2"
reqwest = { version = "0.12.8", features = ["json"] }
anyhow = "1.0.90"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
